# Cpider-console

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  webui.py
data/: spider_console.db
dpjs/: standalone_dpjs_downloader.py
dpjs/google_user_data/: ChromeFeatureState  Local State
dpjs/google_user_data/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Secure Preferences  Top Sites  TransportSecurity  Web Data
dpjs/google_user_data/GrShaderCache/: data_1  index
dpjs/google_user_data/GraphiteDawnCache/: data_0  data_1  data_2  index
dpjs/google_user_data/Safe Browsing/: ChromeExtMalware.store  UrlBilling.store  UrlBilling.store.4_13419422949793913  UrlCsdAllowlist.store  UrlCsdDownloadAllowlist.store  UrlHighConfidenceAllowlist.store  UrlHighConfidenceAllowlist.store.32_13419422949781133  UrlMalBin.store  UrlMalBin.store.4_13419422949787406  UrlMalware.store  UrlMalware.store.4_13419422949783513  UrlSoceng.store  UrlSubresourceFilter.store  UrlSubresourceFilter.store.4_13419422949795270  UrlSuspiciousSite.store  UrlSuspiciousSite.store.4_13419422949786662  UrlUws.store  (+1 more)
log/: migration_log_2026-04-01.md
src/config/: settings.py
src/core/: dpjs_service.py  utils.py  video_service.py
src/database/: __init__.py  crud.py  init_db.py  models.py  session.py
src/web/: app.py  task_manager.py
static/css/: style.css
static/js/: app.js
templates/: base.html  dashboard.html  dpjs_spider.html  login.html  settings.html  video_spider.html
(+951 files in other folders)
